# Meeting_Assistant_Agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/v1/: __init__.py  workflows.py
docs/: AGENT_INTERVIEW_PRIMER.md  IMPLEMENTATION_PLAN.md
graph/: __init__.py  ambiguity_rules.py  ingest_utils.py  workflow.py
graph/nodes/: __init__.py  ambiguity.py  extract.py  ingest.py
schemas/: __init__.py  ambiguity.py  api.py  enums.py  errors.py  extraction.py  state.py  tasks.py
scripts/: groq_smoke.py
tests/: conftest.py  test_ambiguity_rules.py  test_ingest_utils.py  test_schemas_smoke.py  test_workflow_api.py
tests/fixtures/: transcript_no_owner.txt  transcript_short.txt  transcript_with_owner.txt
tools/: __init__.py
tools/sinks/: __init__.py
workers/: __init__.py
